--- a/lua/snippets/package.json
+++ b/lua/snippets/package.json
@@ -16,6 +16,10 @@
             {
                 "language": "typescript",
                 "path": "./typescript.json"
+            },
+            {
+                "language": "metal",
+                "path": "./metal.json"
             }
         ]
     }
