--- a/lua/snippets/package.json
+++ b/lua/snippets/package.json
@@ -24,6 +24,10 @@
             {
                 "language": "haskell",
                 "path": "./haskell.json"
+            },
+            {
+                "language": "latex",
+                "path": "./latex.json"
             }
         ]
     }
